<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:enabled="true"
        android:title="@string/search" />
    <item
        android:id="@+id/action_picture"
        android:icon="@drawable/ic_camera_white_24dp"
        android:enabled="true"
        android:title="@string/picture" />
    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/ic_gallery_white_24dp"
        android:enabled="true"
        android:title="@string/gallery" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_portrait_white_24dp"
        android:enabled="true"
        android:title="@string/account" />
</menu>